--- a/jeecg-boot/jeecg-boot-module-system/src/main/resources/application-dev.yml
+++ b/jeecg-boot/jeecg-boot-module-system/src/main/resources/application-dev.yml
@@ -96,9 +96,14 @@ spring:
         connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
       datasource:
         master:
-          url: jdbc:mysql://127.0.0.1:3306/jeecg-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+          url: jdbc:mysql://122.51.161.200:33306/jeecg-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false
           username: root
-          password: root
+          password: 123
+          driver-class-name: com.mysql.jdbc.Driver
+        jetendb:
+          url: jdbc:mysql://122.51.161.200:33306/jetendb?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+          username: root
+          password: 123
           driver-class-name: com.mysql.jdbc.Driver
           # 多数据源配置
           #multi-datasource1:
@@ -109,7 +114,7 @@ spring:
   #redis 配置
   redis:
     database: 0
-    host: 127.0.0.1
+    host: 122.51.161.200
     lettuce:
       pool:
         max-active: 8   #最大连接数据库连接数,设 0 为没有限制
@@ -118,7 +123,7 @@ spring:
         min-idle: 0     #最小等待连接中的数量,设 0 为没有限制
       shutdown-timeout: 100ms
     password: ''
-    port: 6379
+    port: 36379
 #mybatis plus 设置
 mybatis-plus:
   mapper-locations: classpath*:org/jeecg/modules/**/xml/*Mapper.xml
@@ -137,9 +142,9 @@ mybatis-plus:
 jeecg :
   path :
     #文件上传根目录 设置
-    upload: D://upFiles
+    upload: D://tmp//upFiles
     #webapp文件路径
-    webapp: D://webapp
+    webapp: D://tmp//webapp
   #短信秘钥
   sms:
      accessKeyId: ??
